...
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_meetings"
            android:name="com.example.mareu.MainActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="56dp"
            app:layoutManager="LinearLayoutManager"
            tools:context=".Activity.MainActivity" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />
...
